Integrate policies into Akka coordinated shutdown.
Signed-off-by: Yufei Cai <yufei.cai@bosch.io>